--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "พนันบอล",
     "เว็บพนันบอลออนไลน์"
   ],
-  "repository": "https://github.com/UFAPRO888s/เว็บพนันบอลออนไลน์",
+  "repository": "https://github.com/UFAPRO888s/BALL-UFABET",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
